--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ h1{
 
 
 body{
- background-image:url("Iconos/webb.png");   
+ background-image:url("img/webb.png");   
    background-repeat: no-repeat;
 }
 
