--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,8 +10,7 @@ h2{
 header{
    width:100%;
    height:auto;  
-     background-color:  #ececec
-  z-index: 2;
+   background-color: #ececec; 
 }
 
 
